# snackonai

./: README.md
lightricks-ltx-2-av/: .gitignore  Claude.md  Prompt.md  README.md  Skills.md  generate.py  requirements.txt  setup.sh
mr-pixel-smith/: CLAUDE.md  Dockerfile  README.md  entrypoint.sh  mr_pixel_smith.py  pyproject.toml  setup.py
mr-pixel-smith-1/: .gitignore  mr_pixel_smith.sh  skills.md
mr-pixel-smith/mr_pixel_smith/: __init__.py  cli.py
mr-pixel-smith/tests/: test_generate.py  test_integration.py
mr_pixel_smith/: cli.py
python/bee-ai-framework/linkedin-scout-agent/: readme.md
python/bee-ai-framework/weather-agent/: dockerfile  readme.md  requirements.txt  weather-agent.py
python/linkedin-scout-agent/: dockerfile  linkedin-scout-agent.py  requirements.txt
snackonai-clips/: .gitignore  README.md  pyproject.toml  requirements.txt  sample_output.json  snackonaiclips.py
snackonai-clips/snackonaiclips/: __init__.py  claude.md  cli.py  config.py  extractor.py  skills.md  summarizer.py  tts.py  utils.py  video_generator.py
snackonai-clips/snackonaiclips/tests/: test_extractor.py  test_integration.py  test_summarizer.py  test_video_generator.py
